# znmap

./: .gitignore  CLAUDE.md  FPEngine.cc  Makefile.in  NmapOps.cc  NmapOps.h  README.md  Target.cc  build_pgo.sh  combined_scan.xml  meson.build  meson_config.h.in  multicast_discovery.cc  multicast_discovery.h  nmap.cc  nmap.h  nmap_dns.cc  osscan2.cc  osscan2.h  output.cc  pg_output.cc  pg_output.h  pg_schema.sql  portlist.cc  portlist.h  scan_engine.cc  scan_engine.h  scan_engine_raw.cc  service_scan.cc  service_scan.h  targets.cc  tcpip.cc  traceroute.cc  xml.cc
benchmarks/: REPORT.md  baseline.txt  checksum_bench.c  checksum_bench_zig  phase1-simd-checksum.txt  phase2-probe-matching.txt  phase3-4-final.txt  phase5-privileged.txt  run_bench.sh
libnetutil/: TransportLayerElement.cc  meson.build
nbase/: meson.build
ndiff/ndiff.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
nsock/src/: engine_io_uring.c  meson.build  nsock_engines.c  nsock_ssl.c
scripts/: 99-nmap-caps.rules  setup-caps.sh
zenmap/zenmap.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
zig/: aho_corasick.h  aho_corasick.zig  arena.h  arena.zig  banner_match.h  banner_match.zig  build.zig  checksum.zig  dns_pool.h  dns_pool.zig  fp_match.h  fp_match.zig  ip_range.h  ip_range.zig  meson.build  pkt_builder.h  pkt_builder.zig  pkt_mmap.h  pkt_mmap.zig  pkt_parse.h  pkt_parse.zig  portstate.h  portstate.zig  probe_filter.h  probe_filter.zig
